--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "postinstall": "node ./decorate-angular-cli.js && ngcc --properties es2015 browser module main",
     "start": "nx serve",
     "build": "nx build",
-    "test": "nx test"
+    "test": "nx test",
+    "format:write": "prettier --ignore-path .gitignore --write .",
+    "lint": "nx run-many --all --target=lint"
   },
   "private": true,
   "dependencies": {
