feat(01_nx): creadas nuevas librerías

--- a/angular.json
+++ b/angular.json
@@ -2,6 +2,8 @@
   "$schema": "./node_modules/nx/schemas/workspace-schema.json",
   "version": 2,
   "projects": {
+    "data": "libs/data",
+    "typescript-common": "libs/typescript-common",
     "world-bank": "apps/world-bank",
     "world-bank-e2e": "apps/world-bank-e2e"
   }
