--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -16,9 +16,7 @@
     "baseUrl": ".",
     "paths": {
       "@data": ["libs/data/src/index.ts"],
-      "@typescript-common": [
-        "libs/typescript-common/src/index.ts"
-      ]
+      "@typescript-common": ["libs/typescript-common/src/index.ts"]
     }
   },
   "exclude": ["node_modules", "tmp"]
