--- a/apps/world-bank/project.json
+++ b/apps/world-bank/project.json
@@ -5,7 +5,9 @@
   "targets": {
     "build": {
       "executor": "@angular-devkit/build-angular:browser",
-      "outputs": ["{options.outputPath}"],
+      "outputs": [
+        "{options.outputPath}"
+      ],
       "options": {
         "outputPath": "dist/apps/world-bank",
         "index": "apps/world-bank/src/index.html",
@@ -17,7 +19,10 @@
           "apps/world-bank/src/favicon.ico",
           "apps/world-bank/src/assets"
         ],
-        "styles": ["apps/world-bank/src/styles.scss"],
+        "styles": [
+          "./node_modules/@angular/material/prebuilt-themes/indigo-pink.css",
+          "apps/world-bank/src/styles.scss"
+        ],
         "scripts": []
       },
       "configurations": {
@@ -82,7 +87,9 @@
     },
     "test": {
       "executor": "@nrwl/jest:jest",
-      "outputs": ["coverage/apps/world-bank"],
+      "outputs": [
+        "coverage/apps/world-bank"
+      ],
       "options": {
         "jestConfig": "apps/world-bank/jest.config.ts",
         "passWithNoTests": true
