--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@angular/common": "~13.3.0",
     "@angular/compiler": "~13.3.0",
     "@angular/core": "~13.3.0",
+    "@angular/elements": "^14.0.1",
     "@angular/forms": "~13.3.0",
     "@angular/material": "^13.3.9",
     "@angular/platform-browser": "~13.3.0",
